test/analyzer/input_programs/invalid_programs/program28.tea
f := (x, y, z) ->
  return true*x
end
